# direct-play-nice

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  Cargo.toml  OCR_BENCHMARK.md  README.md  SUPPORTED_DEVICES.md  build.rs  cliff.toml  release-plz.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/templates/: build-setup.yml
.github/workflows/: benchmark-runner-smoke.yml  benchmarks-manual.yml  cd.yml  ci-full.yml  ci-image.yml  ci.yml  docs-deploy.yml  docs.yml  ocr-gpu-rapid.yml  release-readiness.yml  release.yml  security.yml
benches/: OCR_BENCHMARK.md  ocr_benchmark.rs  resize_benchmark.rs  transcode_benchmark.rs  upscale_benchmark.rs
ci/: Dockerfile.ci
config/: ocr-routing.toml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  build-and-test.md  cli-quick-start.md  command-reference.md  getting-started.md  hardware-acceleration.md  index.md  installation.md  ocr-engine-architecture.md  plex-refresh.md  probe-and-debug.md  quality-controls.md  release-and-versioning.md  release-process.md  servarr.md  subtitle-ocr.md  troubleshooting.md
scripts/: extract_changelog_release_notes.sh  generate_release_notes.sh  test-concurrent.sh  validate_release_changelog.sh
scripts/ci/: vcpkg_fingerprint.py
scripts/ocr-tools/: Dockerfile.paddleocr-train  Dockerfile.paddleocr-train-cu112  README.md  check_gpu_env.sh  compare_srt.py  env_maxwell_legacy.sh  evaluate_srt_quality.py  generate_subtitle_rec_dataset.py  run_ocr_fixture_eval.sh  run_ocr_stress_benchmark.sh  run_onnx_tuning_matrix.sh  train_subtitle_rec_smoke.sh  train_torch_subtitle_rec.py
scripts/opencv-tools/: build_opencv5_cuda.sh  dpn_opencv5_cuda_preprocess.cpp
scripts/resize-tools/: run_resize_benchmark.sh
scripts/transcode-tools/: run_transcode_benchmark.sh  run_transcode_benchmark.zsh
scripts/upscale-tools/: run_upscale_benchmark.sh
src/: cli.rs  config.rs  config_merge.rs  ffmpeg_utils.rs  gpu.rs  lib.rs  logging.rs  main.rs  main_probe.rs  main_retry.rs  main_sidecar.rs  main_tests.rs  plex.rs  servarr.rs  subtitle_ocr.rs  throttle.rs  transcoder.rs  types.rs  utils.rs
src/cli/: mod.rs  progress.rs
src/devices/: apple_tv.rs  chromecast.rs  device_profile.rs  fire_tv.rs  mod.rs  roku.rs
src/servarr/: api.rs  cache.rs  env_helpers.rs  language.rs  media_paths.rs  path_policy.rs  servarr_tests.rs
src/streaming_devices/: mod.rs  streaming_device.rs
src/subtitle_ocr/: engine.rs  engine_core.rs  engine_models.rs  engine_runtime.rs  engine_setup.rs  fixture_eval.rs  language.rs  mod.rs  muxing.rs  ocr_pipeline.rs  preprocess.rs  tests.rs  text_processing.rs  text_render.rs
src/subtitle_ocr/engine/: converters.rs  factory.rs  mod.rs  models.rs  providers.rs  runtime.rs  types.rs  workers.rs
src/subtitle_ocr/text_processing/: english_words.rs
src/transcoder/: app.rs  app_convert.rs  app_entry.rs  cuda_resize.rs  ffmpeg_diagnostics.rs  ffmpeg_ext.rs  h264.rs  helpers.rs  mod.rs  pipeline.rs  pipeline_assessment.rs  pipeline_codec.rs  pipeline_streams.rs  quality.rs  stream_setup.rs  timestamp.rs  verification.rs
src/transcoder/cuda_resize/: linux.rs
tests/: cli_all_devices.rs  cli_bitmap_subs.rs  cli_corrupt_decode.rs  cli_delete_source.rs  cli_direct_play.rs  cli_direct_play_skip.rs  cli_hw_flags.rs  cli_hw_probe.rs  cli_multi_video_skip.rs  cli_no_config.rs  cli_ocr_multilang_stress.rs  cli_ocr_timing.rs  cli_profile_level.rs  cli_resize.rs  cli_servarr.rs  cli_skip_unsupported.rs  cli_sub_mode_skip.rs  cli_upscale.rs  cli_vobsub_subs.rs  device_constraints.rs  duration_regression.rs  nvenc_duration.rs  nvenc_integration.rs  nvenc_matrix.rs  ocr_tests.rs
tests/common/: mod.rs
tests/golden_subs/: README.md  silence_golden.json
tests/golden_subs/multilang/: eng.json  fra.json  jpn.json  kor.json  spa.json
tests/golden_subs/outlined_vobsub/: outlined_vobsub_0300_short_phrase.json  outlined_vobsub_0600_spaced_phrase.json  outlined_vobsub_0720_short_phrase.json
