[package]
name = "direct_play_nice"
description = "CLI program that converts video files to direct-play-compatible formats."
license = "GPL-3.0-only"
documentation = "https://github.com/ns-mkusper/direct-play-nice"
homepage = "https://github.com/ns-mkusper/direct-play-nice"
repository = "https://github.com/ns-mkusper/direct-play-nice"
version = "0.1.0-alpha.2"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
cstr = "0.2.12"
env_logger = "0.11.3"
log = "0.4.22"
serde_json = "1.0"
# rsmpeg/rusty_ffmpeg track FFmpeg 8 as of 0.18/0.16.
rsmpeg = { version = "0.18.0+ffmpeg.8.0", default-features = false, features = [
  "ffmpeg8",
  "link_vcpkg_ffmpeg",
] }
rusty_ffmpeg = { version = "0.16.7+ffmpeg.8", features = ["link_vcpkg_ffmpeg"] }
serde = { version = "1.0.204", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
syslog = "6.1.1"
toml = "0.8.16"
vcpkg = "0.2.15"
fs2 = "0.4"
libc = "0.2"
roxmltree = "0.20.0"
ureq = { version = "2.9.7", features = ["tls"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# customize cargo-dist build env (install vcpkg and vcpkg build, etc)
# see: https://opensource.axo.dev/cargo-dist/book/ci/customizing.html#customizing-build-setup
github-build-setup = "../templates/build-setup.yml"

[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"

[package.metadata.vcpkg]
dependencies = [
  "ffmpeg[x264,vpx,freetype,fontconfig,nvcodec,dav1d]",
  "x264[asm,core]",
]
# fork includes update to ffmpeg8
# see: https://github.com/microsoft/vcpkg/pull/47107
git = "https://github.com/cqundefine/vcpkg"
rev = "21012a516c9e5fa547baf212f2d937cd8d15dcb5"

[package.metadata.vcpkg.target.x86_64-pc-windows-msvc]
triplet = "x64-windows-static"
dependencies = [
  "ffmpeg[x264,vpx,freetype,fontconfig,nvcodec,dav1d,qsv,amf]",
  "x264[asm,core]",
]
