[package]
name = "direct_play_nice"
description = "CLI program that converts video files to direct-play-compatible formats."
license = "GPL-3.0-only"
documentation = "https://github.com/ns-mkusper/direct-play-nice"
homepage = "https://github.com/ns-mkusper/direct-play-nice"
repository = "https://github.com/ns-mkusper/direct-play-nice"
version = "0.1.0-alpha.3"
edition = "2021"


[features]
ffmpeg-cli-tests = []


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
cstr = "0.2.12"
env_logger = "0.11.3"
log = "0.4.22"
image = "0.25"
paddle-ocr-rs = "0.6.1"
ort = { version = "=2.0.0-rc.10" }
sha2 = "0.10"
serde_json = "1.0"
# rsmpeg/rusty_ffmpeg track FFmpeg 8 as of 0.18/0.16.
rsmpeg = { version = "0.18.0", default-features = false, features = [
  "ffmpeg8",
  "link_vcpkg_ffmpeg",
] }
rusty_ffmpeg = { version = "0.16.7", features = ["link_vcpkg_ffmpeg"] }
serde = { version = "1.0.204", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
syslog = "6.1.1"
toml = "0.8.16"
vcpkg = "0.2.15"
fs2 = "0.4"
libc = "0.2"
roxmltree = "0.20.0"
ureq = { version = "2.9.7", features = ["tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda", "directml"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["coreml"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
mockito = "1.7.2"
strsim = "0.11"
criterion = "0.4"

[[bench]]
name = "ocr_benchmark"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# customize cargo-dist build env (install vcpkg and vcpkg build, etc)
# see: https://opensource.axo.dev/cargo-dist/book/ci/customizing.html#customizing-build-setup
github-build-setup = "../templates/build-setup.yml"

[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"

[package.metadata.vcpkg]
dependencies = [
  "ffmpeg[x264,vpx,freetype,fontconfig,nvcodec,dav1d]",
  "x264[asm,core]",
]
# fork includes update to ffmpeg8
# see: https://github.com/microsoft/vcpkg/pull/47107
# git = "https://github.com/cqundefine/vcpkg"
# rev = "21012a516c9e5fa547baf212f2d937cd8d15dcb5"
git = "https://github.com/microsoft/vcpkg.git"
rev = "05442024c3fda64320bd25d2251cc9807b84fb6f"

[package.metadata.vcpkg.target.x86_64-pc-windows-msvc]
triplet = "x64-windows-static-md"
dependencies = [
  "ffmpeg[x264,vpx,freetype,fontconfig,nvcodec,dav1d,qsv,amf]",
  "x264[asm,core]",
]
